@@ -19,6 +19,8 @@
 	* lib/qwik/db-filesystem.rb: Do not use Enumerable.
 	* lib/qwik/pages.rb: New method list.
 
+	* lib/qwik/pages.rb: New method title_list_keys and date_list_keys.
+
 2009-09-02  Kouichirou Eto  <2009@eto.com.nospam.com>
 
 	* lib/qwik/act-metadata.rb: Do not cache SiteMetadata object.
